--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,13 @@ buildscript {
         androidx_version = '1.0.0'
         androidx_app_compat_version = '1.0.2'
         test_runner_version = '1.1.0'
+        khttp_version = '0.1.2'
     }
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
@@ -55,6 +57,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
