--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,8 @@ dependencies {
     // Glide dependencies
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha01'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
