--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,75 +15,87 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.uamp">
+  xmlns:dist="http://schemas.android.com/apk/distribution"
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.example.android.uamp">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:targetSandboxVersion="2"
-        android:theme="@style/AppTheme">
+  <application
+    android:allowBackup="true"
+    android:fontFamily="sans-serif-black"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:targetSandboxVersion="2"
+    android:theme="@style/AppTheme">
 
-        <!-- Enable instant app support -->
-        <dist:module dist:instant="true" />
+    <!-- Enable instant app support -->
+    <dist:module dist:instant="true"/>
 
-        <!-- Declare that UAMP supports Android Auto. -->
-        <meta-data
-            android:name="com.google.android.gms.car.application"
-            android:resource="@xml/automotive_app_desc" />
+    <!-- Declare that UAMP supports Android Auto. -->
+    <meta-data
+      android:name="com.google.android.gms.car.application"
+      android:resource="@xml/automotive_app_desc"/>
 
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+    <activity
+      android:name=".YearActivity"
+      android:launchMode="singleInstance">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
 
-            <!-- App links for http -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+    <activity
+      android:launchMode="singleTop"
+      android:name=".MainActivity"
+      android:parentActivityName=".YearActivity">
+      <meta-data
+        android:name="android.support.PARENT_ACTIVITY"
+        android:value=".YearActivity"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+      <!-- App links for http -->
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
 
-                <data
-                    android:host="example.android.com"
-                    android:pathPattern="/uamp"
-                    android:scheme="http" />
-            </intent-filter>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
 
-            <!-- App links for https -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+        <data
+          android:host="example.android.com"
+          android:pathPattern="/uamp"
+          android:scheme="http"/>
+      </intent-filter>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+      <!-- App links for https -->
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
 
-                <data
-                    android:host="example.android.com"
-                    android:pathPattern="/uamp"
-                    android:scheme="https" />
-            </intent-filter>
-        </activity>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
 
-        <!--
-        Declare the common MediaBrowserService for use in the mobile app, including
-        with the Android Auto app.
-        -->
-        <service
-            android:name=".media.MusicService"
-            android:enabled="true"
-            android:exported="true"
-            tools:ignore="ExportedService">
+        <data
+          android:host="example.android.com"
+          android:pathPattern="/uamp"
+          android:scheme="https"/>
+      </intent-filter>
+    </activity>
 
-            <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService" />
-            </intent-filter>
-        </service>
+    <!--
+    Declare the common MediaBrowserService for use in the mobile app, including
+    with the Android Auto app.
+    -->
+    <service
+      android:enabled="true"
+      android:exported="true"
+      android:name=".media.MusicService"
+      tools:ignore="ExportedService">
 
-    </application>
+      <intent-filter>
+        <action android:name="android.media.browse.MediaBrowserService"/>
+      </intent-filter>
+    </service>
+
+  </application>
 
 </manifest>
