--- a/build.gradle
+++ b/build.gradle
@@ -39,20 +39,22 @@ buildscript {
         gradle_version = '3.1.4'
         gson_version = '2.8.5'
         junit_version = '4.12'
-        kotlin_version = '1.3.30'
+        kotlin_version = '1.3.31'
         kotlin_coroutines = '1.1.0'
         materialVersion = '1.0.0'
         recycler_view_version = '1.0.0'
         robolectric_version = '4.2'
         test_runner_version = '1.1.0'
+        khttp_version = '0.1.0'
     }
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.android.gms:strict-version-matcher-plugin:$gms_strict_version_matcher_version"
 
@@ -65,6 +67,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
