--- a/common/build.gradle
+++ b/common/build.gradle
@@ -70,6 +70,8 @@ dependencies {
         api "com.google.android.exoplayer:extension-mediasession:$exoplayer_version"
     }
 
+    api "io.karn:khttp-android:$khttp_version"
+
     // Glide dependencies
     api "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
