Workaround for missing nowPlaying bundle on activity change, fixed duration (already in Ms), removed glide references for now for adding art later.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,9 +47,9 @@
     </activity>
 
     <activity
-      android:launchMode="singleTop"
       android:name=".MainActivity"
-      android:parentActivityName=".YearActivity">
+      android:parentActivityName=".YearActivity"
+      android:launchMode="singleTop">
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
         android:value=".YearActivity"/>
