--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2017 Google Inc. All rights reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,83 +14,83 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:dist="http://schemas.android.com/apk/distribution"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="com.example.android.uamp">
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.uamp">
 
-  <application
-    android:allowBackup="true"
-    android:fontFamily="sans-serif-black"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:targetSandboxVersion="2"
-    android:theme="@style/AppTheme">
+    <application
+        android:allowBackup="true"
+        android:fontFamily="sans-serif-black"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:targetSandboxVersion="2"
+        android:theme="@style/AppTheme">
 
-    <!-- Enable instant app support -->
-    <dist:module dist:instant="true"/>
+        <!-- Enable instant app support -->
+        <dist:module dist:instant="true" />
 
-    <!-- Declare that UAMP supports Android Auto. -->
-    <meta-data
-      android:name="com.google.android.gms.car.application"
-      android:resource="@xml/automotive_app_desc"/>
+        <!-- Declare that UAMP supports Android Auto. -->
+        <meta-data
+            android:name="com.google.android.gms.car.application"
+            android:resource="@xml/automotive_app_desc" />
 
-    <activity
-      android:name=".YearActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+        <activity
+            android:name=".YearActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    <activity
-      android:name=".MainActivity"
-      android:parentActivityName=".YearActivity"
-      android:launchMode="singleTop">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".YearActivity">
 
-      <!-- App links for http -->
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
+            <!-- App links for http -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-        <data
-          android:host="example.android.com"
-          android:pathPattern="/uamp"
-          android:scheme="http"/>
-      </intent-filter>
+                <data
+                    android:host="example.android.com"
+                    android:pathPattern="/uamp"
+                    android:scheme="http" />
+            </intent-filter>
 
-      <!-- App links for https -->
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
+            <!-- App links for https -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <category android:name="android.intent.category.DEFAULT"/>
-        <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-        <data
-          android:host="example.android.com"
-          android:pathPattern="/uamp"
-          android:scheme="https"/>
-      </intent-filter>
-    </activity>
+                <data
+                    android:host="example.android.com"
+                    android:pathPattern="/uamp"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
 
-    <!--
-    Declare the common MediaBrowserService for use in the mobile app, including
-    with the Android Auto app.
-    -->
-    <service
-      android:enabled="true"
-      android:exported="true"
-      android:name=".media.MusicService"
-      tools:ignore="ExportedService">
+        <!--
+        Declare the common MediaBrowserService for use in the mobile app, including
+        with the Android Auto app.
+        -->
+        <service
+            android:name=".media.MusicService"
+            android:enabled="true"
+            android:exported="true"
+            tools:ignore="ExportedService">
 
-      <intent-filter>
-        <action android:name="android.media.browse.MediaBrowserService"/>
-      </intent-filter>
-    </service>
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
 
-  </application>
+    </application>
 
 </manifest>
