--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation 'com.squareup.okio:okio:2.2.2'
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha01'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
