--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
         targetSdkVersion = 28
 
         // Dependency versions.
-        androidx_app_compat_version = '1.1.0-alpha04'
+        androidx_app_compat_version = '1.1.0-beta01'
         androidx_car_version = '1.0.0-alpha7'
         androidx_core_ktx_version = '1.0.1'
         androidx_media_version = '1.0.1'
@@ -39,10 +39,10 @@ buildscript {
         gradle_version = '3.1.4'
         gson_version = '2.8.5'
         junit_version = '4.12'
-        kotlin_version = '1.3.31'
+        kotlin_version = '1.3.40'
         kotlin_coroutines = '1.1.0'
         materialVersion = '1.0.0'
-        recycler_view_version = '1.0.0'
+        recycler_view_version = '1.1.0-alpha06'
         robolectric_version = '4.2'
         test_runner_version = '1.1.0'
         khttp_version = '0.1.0'
@@ -51,7 +51,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -67,7 +67,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
+
     }
 }
 
